Backend-frontend updates: - Improve application system - Implement instant messaging for applications - Change UtcNow to Now - Stuff and thangs

--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -84,7 +84,7 @@
                     </button>
                 </div>
 
-                <input type="hidden" name="FormLoadTime" value="@DateTime.UtcNow.Ticks" />
+                <input type="hidden" name="FormLoadTime" value="@DateTime.Now.Ticks" />
             </form>
         </div>
     </div>
