--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -4,17 +4,17 @@
     ViewData["Title"] = "GradSync - Home";
 }
 
-<div class="min-h-screen bg-[#F1F2F4] mt-12">
+<div class="mt-12 min-h-screen bg-[#F1F2F4]">
     <div class="mx-12 mt-6 flex">
-        <div class="flex justify-between mx-12 mt-12">
+        <div class="mx-12 mt-12 flex justify-between">
 
             <!-- Left Content -->
-            <div class="w-3/4 mt-10">
-                <div class="text-5xl font-bold text-gray-900 mb-2 leading-tight">
+            <div class="mt-10 w-3/4">
+                <div class="mb-2 text-5xl font-bold leading-tight text-gray-900">
                     Discover jobs that suit your
                     <span class="text-[#7A1515]">interest & skills</span> today!
                 </div>
-                <div class="mr-12 pr-12 text-justify text-gray-600 font-normal tracking-tight mb-2">
+                <div class="mb-2 mr-12 pr-12 text-justify font-normal tracking-tight text-gray-600">
                     <p class="text-gray-600">
                         Unlock your potential with GradSync. We connect you with opportunities that align with your
                         expertise and passions, making the job search process simple and efficient. Whether you're
@@ -23,14 +23,14 @@
                     </p>
                 </div>
                 <a href="@Url.Action("GetAllJobsApplicant", "Job")">
-                    <button class="bg-[#7A1515] hover:bg-[#991b1b] font-semibold text-white px-3 py-2 rounded-lg">
+                    <button class="rounded-lg bg-[#7A1515] px-3 py-2 font-semibold text-white hover:bg-[#991b1b]">
                         Job Search
                     </button>
                 </a>
             </div>
 
             <!-- Right Image -->
-            <div class="w-1/2 flex justify-end mt-1">
+            <div class="mt-1 flex w-1/2 justify-end">
                 <img src="/img/hero.png" alt="Illustration" class="full">
             </div>
         </div>
@@ -38,11 +38,11 @@
 
     <!-- Featured Jobs Section -->
     <div class="mx-12">
-        <div class="flex justify-between mx-12 mb-2">
-            <div class="text-xl font-semibold text-gray-700 leading-tight">Featured Jobs</div>
+        <div class="mx-12 mb-2 flex justify-between">
+            <div class="text-xl font-semibold leading-tight text-gray-700">Featured Jobs</div>
         </div>
 
-        <div class="text-left mx-12 mb-4 max-w-[calc(100vw-200px)] flex-grow overflow-x-auto">
+        <div class="max-w-[calc(100vw-200px)] mx-12 mb-4 flex-grow overflow-x-auto text-left">
             <div>@await Html.PartialAsync("FeaturedJobs", Model)</div>
         </div>
     </div>
