--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -69,8 +69,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="rounded bg-gray-500 px-4 py-2 font-semibold text-white hover:bg-gray-600" data-dismiss="modal">Cancel</button>
-                    <form asp-action="SignOutUser" asp-controller="Account" method="post">
-                        <button type="submit" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
+                    <form asp-action="SignOutUser" asp-controller="Account" method="post" id="signOutForm">
+                        <button type="submit" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D] disabled:bg-gray-400 disabled:cursor-not-allowed" id="signOutButton">
                             Confirm
                         </button>
                     </form>
@@ -86,6 +86,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/tagify/dist/tagify.js"></script>
+    <script src="~/lib/signalr/signalr.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js"></script>
     <script>
         toastr.options = {
@@ -94,6 +95,14 @@
             closeButton: true,
             progressBar: true
         };
+        document.addEventListener("DOMContentLoaded", function () {
+            const form = document.getElementById('signOutForm');
+            const button = document.getElementById('signOutButton');
+
+            form.addEventListener('submit', function (event) {
+                button.disabled = true;
+            });
+        });
     </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
